<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_pizza_black"
        android:orderInCategory="1"
        android:title="@string/menu_title"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person_black"
        android:orderInCategory="2"
        android:title="@string/profile_title"/>

    <item
        android:id="@+id/pizzerias"
        android:icon="@drawable/ic_store_mall_directory_black"
        android:orderInCategory="3"
        android:title="@string/pizzerias_title"/>

    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_shopping_cart_black"
        android:orderInCategory="4"
        android:title="@string/cart_title"/>

</menu>
